Изменены id у заданий вариантов

--- a/variant_3.html
+++ b/variant_3.html
@@ -26,16 +26,16 @@
 <main>
   <section class="variants_types">
     <ul class="variants_types_list">
-      <li class="variants_types_list-item active numbers">Задания по вариантам</li>
+      <li class="variants_types_list-item numbers">Задания по номерам</li>
       <li class="variants_types_list-item themes">Задания по темам</li>
-      <li class="variants_types_list-item prepared">Варианты</li>
+      <li class="variants_types_list-item active prepared">Варианты</li>
     </ul>
   </section>
   <article class="variant">
     <h1>Вариант 3</h1>
     <form action="#" method="get" name="v3" id="v3">
       <ul class="variant-tasks">
-        <li class="variant-task" id="v3t1">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">1.</div>
             <p>На рисунке схема дорог изображена в виде графа, в таблице содержатся сведения о длине этих
@@ -46,10 +46,10 @@
             </p>
             <img src="img/variant_3/task1-1.png" alt="Изображение к заданию 1">
             <img src="img/variant_3/task1-2.png" alt="Изображение к заданию 1">
-            <input type="text" id="t-v3t1">
+            <input type="text" id="v3t1">
           </div>
         </li>
-        <li class="variant-task" id="v3t2">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">2.</div>
             <p> Логическая функция F задаётся выражением (¬x ∨ ¬y) ∧ ¬(x ≡ z) ∧ w. <br>
@@ -66,10 +66,10 @@
             <img src="img/variant_3/task2-2.png" alt="Изображение к заданию 2">
             <p>Тогда первому столбцу соответствует переменная y, а второму столбцу соответствует переменная x.
               В ответе нужно написать: yx.</p>
-            <input type="text" id="t-v3t2">
+            <input type="text" id="v3t2">
           </div>
         </li>
-        <li class="variant-task" id="v3t3">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">3.</div>
             <p>В файле приведён фрагмент базы данных «Продукты», содержащей информацию о поставках товаров и их продаже. База данных состоит из трёх таблиц.</p>
@@ -84,10 +84,10 @@
             <p>Используя информацию из приведённой базы данных, определите, сколько килограммов кофе всех
               видов поступило за указанный период в магазины Октябрьского района.
             </p>
-            <input type="text" id="t-v3t3">
+            <input type="text" id="v3t3">
           </div>
         </li>
-        <li class="variant-task" id="v3t4">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">4.</div>
             <p>По каналу связи передаются сообщения, содержащие только четыре буквы: Р, Е, К, А; для
@@ -98,10 +98,10 @@
               Примечание. Условие Фано означает, что ни одно кодовое слово не является началом другого кодового
               слова.
             </p>
-            <input type="text" id="t-v3t4">
+            <input type="text" id="v3t4">
           </div>
         </li>
-        <li class="variant-task" id="v3t5">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">5.</div>
             <p>На вход алгоритма подаётся натуральное число N. Алгоритм строит по нему новое число R
@@ -117,10 +117,10 @@
               Укажите минимальное число R, которое превышает 54 и может являться результатом работы
               алгоритма. В ответе это число запишите в десятичной системе<br>
             </p>
-            <input type="text" id="t-v3t5">
+            <input type="text" id="v3t5">
           </div>
         </li>
-        <li class="variant-task" id="v3t6">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">6.</div>
             <p>Исполнитель Черепаха действует на плоскости с декартовой системой координат. В начальный
@@ -139,10 +139,10 @@
               Определите количество точек с целочисленными координатами, лежащих внутри или на границе
               области, которую ограничивает заданная алгоритмом линия.
             </p>
-            <input type="text" id="t-v3t6">
+            <input type="text" id="v3t6">
           </div>
         </li>
-        <li class="variant-task" id="v3t7">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">7.</div>
             <p>Для хранения произвольного растрового изображения размером 128×320 пикселей отведено 20
@@ -150,10 +150,10 @@
               используется одинаковое количество бит, коды пикселей записываются в файл один за другим без
               промежутков. Какое максимальное количество цветов можно использовать в изображении?
             </p>
-            <input type="text" id="t-v3t7">
+            <input type="text" id="v3t7">
           </div>
         </li>
-        <li class="variant-task" id="v3t8">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">8.</div>
             <p>Ольга составляет таблицу кодовых слов для передачи сообщений, каждому сообщению
@@ -161,10 +161,10 @@
               которых есть только буквы A, B, C, D, X, Y. При этом первая буква кодового слова — это буква X или
               Y, а далее в кодовом слове буквы X и Y не встречаются. Сколько различных кодовых слов может
               использовать Ольга?</p>
-            <input type="text" id="t-v3t8">
+            <input type="text" id="v3t8">
           </div>
         </li>
-        <li class="variant-task" id="v3t9">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">9.</div>
             <p>В каждой строке электронной таблицы записаны четыре натуральных числа. Определите, сколько
@@ -173,10 +173,10 @@
               третьей стороны).
             </p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=113564">Задание 9</a>
-            <input type="text" id="t-v3t9">
+            <input type="text" id="v3t9">
           </div>
         </li>
-        <li class="variant-task" id="v3t10">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">10.</div>
             <p>С помощью текстового редактора определите, сколько раз, не считая сносок, встречается слово
@@ -184,10 +184,10 @@
               «его» учитывать не следует. В ответе укажите только число.
             </p>
             <a href="https://inf-ege.sdamgia.ru/doc/inf/zadanie10/10_demo.docx">Задание 10</a>
-            <input type="text" id="t-v3t10">
+            <input type="text" id="v3t10">
           </div>
         </li>
-        <li class="variant-task" id="v3t11">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">11.</div>
             <p>Каждый сотрудник предприятия получает электронный пропуск, на котором записаны личный
@@ -201,10 +201,10 @@
             <p>Вся информация на пропуске упакована так, чтобы занимать минимально возможное количество
               байтов. Сколько байтов занимает вся информация на пропуске? В ответе запишите только целое
               число — количество байтов.</p>
-            <input type="text" id="t-v3t11">
+            <input type="text" id="v3t11">
           </div>
         </li>
-        <li class="variant-task" id="v3t12">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">12.</div>
             <p>Исполнитель Редактор получает на вход строку цифр и преобразовывает её. Редактор может
@@ -255,10 +255,10 @@
               тройки. После выполнения данной программы получилась строка, содержащая 40 единиц, 10 двоек и 8
               троек. Сколько единиц было в исходной строке?
             </p>
-            <input type="text" id="t-v3t12">
+            <input type="text" id="v3t12">
           </div>
         </li>
-        <li class="variant-task" id="v3t13">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">13.</div>
             <p>На рисунке изображена схема дорог, связывающих города А, Б, В, Г, Д, Е, Ж, И, К, Л. По каждой
@@ -266,18 +266,18 @@
               различных путей из города А в город Л?
             </p>
             <img src="img/variant_3/task13.png" alt="Изображение к заданию 13">
-            <input type="text" id="t-v3t13">
+            <input type="text" id="v3t13">
           </div>
         </li>
-        <li class="variant-task" id="v3t14">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">14.</div>
             <p>Значение арифметического выражения: 16¹⁸ · 4¹⁰ − 4⁶ − 16 — записали в системе счисления с
               основанием 4. Сколько цифр «3» содержится в этой записи?</p>
-            <input type="text" id="t-v3t14">
+            <input type="text" id="v3t14">
           </div>
         </li>
-        <li class="variant-task" id="v3t15">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">15.</div>
             <p>Обозначим через m & n поразрядную конъюнкцию неотрицательных целых чисел m и n.<br> Так, например, 14 & 5 = 1110 2 & 01012 = 01002 = 4. Для какого наименьшего неотрицательного
@@ -285,10 +285,10 @@
               <span class="expression">x & 73 = 0 → (x & 28 ≠ 0 → x & А ≠ 0)</span>
               тождественно истинна (т. е. принимает значение 1 при любом неотрицательном целом значении переменной x)?
             </p>
-            <input type="text" id="t-v3t15">
+            <input type="text" id="v3t15">
           </div>
         </li>
-        <li class="variant-task" id="v3t16">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">16.</div>
             <p>
@@ -300,10 +300,10 @@
               Чему равно двенадцатое число в последовательности Падована?
               В ответе запишите только натуральное число.
             </p>
-            <input type="text" id="t-v3t16">
+            <input type="text" id="v3t16">
           </div>
         </li>
-        <li class="variant-task" id="v3t17">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">17.</div>
             <p>В файле содержится последовательность из 10 000 целых положительных чисел. Каждое число
@@ -312,10 +312,10 @@
               таких пар. В данной задаче под парой подразумевается два различных элемента последовательности.
               Порядок элементов в паре не важен.</p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=91233">Задание 17</a>
-            <input type="text" id="t-v3t17">
+            <input type="text" id="v3t17">
           </div>
         </li>
-        <li class="variant-task" id="v3t18">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">18.</div>
             <p>Квадрат разлинован на N×N клеток (1 < N < 17). Исполнитель Робот может перемещаться по
@@ -334,10 +334,10 @@
             </p>
             <img src="img/variant_3/task18.png" alt="Изображение к заданию 18">
             <p>Для указанных входных данных ответом должна быть пара чисел 41 и 22.</p>
-            <input type="text" id="t-v3t18">
+            <input type="text" id="v3t18">
           </div>
         </li>
-        <li class="variant-task" id="v3t19">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">19.</div>
             <p>Два игрока, Петя и Ваня, играют в следующую игру. Перед игроками лежит куча камней. Игроки
@@ -360,10 +360,10 @@
               Известно, что Ваня выиграл своим первым ходом после неудачного первого хода Пети. Укажите
               минимальное значение S, когда такая ситуация возможна.
             </p>
-            <input type="text" id="t-v3t19">
+            <input type="text" id="v3t19">
           </div>
         </li>
-        <li class="variant-task" id="v3t20">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">20.</div>
             <p>Два игрока, Петя и Ваня, играют в следующую игру. Перед игроками лежит куча камней. Игроки
@@ -389,10 +389,10 @@
               — Петя может выиграть своим вторым ходом независимо от того, как будет ходить Ваня. <br>
               Найденные значения запишите в ответе в порядке возрастания без разделительных знаков.
             </p>
-            <input type="text" id="t-v3t20">
+            <input type="text" id="v3t20">
           </div>
         </li>
-        <li class="variant-task" id="v3t21">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">21.</div>
             <p>Два игрока, Петя и Ваня, играют в следующую игру. Перед игроками лежит куча камней. Игроки
@@ -417,10 +417,10 @@
               любой игре Пети; <br>
               — у Вани нет стратегии, которая позволит ему гарантированно выиграть первым ходом.<br>
             </p>
-            <input type="text" id="t-v3t21">
+            <input type="text" id="v3t21">
           </div>
         </li>
-        <li class="variant-task" id="v3t22">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">22.</div>
             <p>В файле содержится информация о совокупности N вычислительных процессов,
@@ -444,10 +444,10 @@
               процесса 3, то есть, через 5 мс. Он длится 7 мс, так что минимальное время завершения всех процессов
               равно 5 + 7 = 12 мс.
             </p>
-            <input type="text" id="t-v3t22">
+            <input type="text" id="v3t22">
           </div>
         </li>
-        <li class="variant-task" id="v3t23">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">23.</div>
             <p>Исполнитель Плюс преобразует число на экране. <br>
@@ -458,10 +458,10 @@
               для исполнителя Плюс — это последовательность команд. <br>
               Сколько существует программ, которые число 1 преобразуют в число 20?
             </p>
-            <input type="text" id="t-v3t23">
+            <input type="text" id="v3t23">
           </div>
         </li>
-        <li class="variant-task" id="v3t24">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">24.</div>
             <p>Текстовый файл состоит не более чем из 1 200 000 символов X, Y, и Z. Определите
@@ -469,10 +469,10 @@
               выполнения этого задания следует написать программу. Ниже приведён файл, который необходимо
               обработать с помощью данного алгоритма.</p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=85003">Задание 24</a>
-            <input type="text" id="t-v3t24">
+            <input type="text" id="v3t24">
           </div>
         </li>
-        <li class="variant-task" id="v3t25">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">25.</div>
             <p>Напишите программу, которая ищет среди целых чисел, принадлежащих числовому отрезку
@@ -486,10 +486,10 @@
               2 4 6 12 18 36 <br>
               2 4 8 10 20 40 <br>
             </p>
-            <input type="text" id="t-v3t25">
+            <input type="text" id="v3t25">
           </div>
         </li>
-        <li class="variant-task" id="v3t26">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">26.</div>
             <p>Системный администратор раз в неделю создаёт архив пользовательских файлов. Однако объём
@@ -519,10 +519,10 @@
               пар — 50, поэтому ответ для приведённого примера: <br>
               2 50
             </p>
-            <input type="text" id="t-v3t26">
+            <input type="text" id="v3t26">
           </div>
         </li>
-        <li class="variant-task" id="v3t27">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">27.</div>
             <p>У медицинской компании есть N пунктов приёма биоматериалов на анализ. Все пункты
@@ -586,7 +586,7 @@
               поскольку написанная по такому алгоритму программа будет выполняться
               слишком долго.
             </p>
-            <input type="text" id="t-v3t27">
+            <input type="text" id="v3t27">
           </div>
         </li>
       </ul>
