--- a/variant_4.html
+++ b/variant_4.html
@@ -26,16 +26,16 @@
 <main>
   <section class="variants_types">
     <ul class="variants_types_list">
-      <li class="variants_types_list-item active numbers">Задания по вариантам</li>
+      <li class="variants_types_list-item numbers">Задания по номерам</li>
       <li class="variants_types_list-item themes">Задания по темам</li>
-      <li class="variants_types_list-item prepared">Варианты</li>
+      <li class="variants_types_list-item active prepared">Варианты</li>
     </ul>
   </section>
   <article class="variant">
     <h1>Вариант 4</h1>
     <form action="#" method="get" name="v4" id="v4">
       <ul class="variant-tasks">
-        <li class="variant-task" id="v4t1">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">1.</div>
             <p>На рисунке слева изображена схема дорог Н-ского района, в таблице звёздочкой обозначено
@@ -45,10 +45,10 @@
             </p>
             <img src="img/variant_4/task1-1.png" alt="Изображение к заданию 1">
             <img src="img/variant_4/task1-2.png" alt="Изображение к заданию 1">
-            <input type="text" id="t-v4t1">
+            <input type="text"  id="v4t1">
           </div>
         </li>
-        <li class="variant-task" id="v4t2">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">2.</div>
             <p>Логическая функция F задаётся выражением (x ≡ (y → z)) ∧ (¬w → (x ≡ y)). На рисунке приведён
@@ -67,10 +67,10 @@
             <p>Тогда первому столбцу соответствует переменная y, а второму столбцу соответствует переменная x.
               В ответе нужно написать: yx.
             </p>
-            <input type="text" id="t-v4t2">
+            <input type="text" id="v4t2">
           </div>
         </li>
-        <li class="variant-task" id="v4t3">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">3.</div>
             <p>В файле приведён фрагмент базы данных «Продукты», содержащей информацию о поставках товаров и их продаже. База данных состоит из трёх таблиц.</p>
@@ -85,10 +85,10 @@
               видов сахара в магазинах Первомайского района за указанный период. <br>
               В ответе запишите целое число — найденную общую стоимость в рублях.
             </p>
-            <input type="text" id="t-v4t3">
+            <input type="text" id="v4t3">
           </div>
         </li>
-        <li class="variant-task" id="v4t4">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">4.</div>
             <p>По каналу связи передаются сообщения, содержащие только пять букв: A, B, С, D, E. Для
@@ -98,10 +98,10 @@
               Укажите кратчайшее кодовое слово для буквы D, при котором код будет допускать однозначное
               декодирование. Если таких кодов несколько, укажите код с наименьшим числовым значением.
             </p>
-            <input type="text" id="t-v4t4">
+            <input type="text" id="v4t4">
           </div>
         </li>
-        <li class="variant-task" id="v4t5">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">5.</div>
             <p>Автомат обрабатывает натуральное число N по следующему алгоритму:
@@ -117,10 +117,10 @@
               4. На экран выводится число 54. <br>
               Какое наименьшее число, большее 105, может появиться на экране в результате работы автомата?
             </p>
-            <input type="text" id="t-v4t5">
+            <input type="text" id="v4t5">
           </div>
         </li>
-        <li class="variant-task" id="v4t6">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">6.</div>
             <p>Исполнитель Черепаха действует на плоскости с декартовой системой координат. В начальный
@@ -138,10 +138,10 @@
               Определите, сколько точек с целочисленными координатами будут находиться внутри области,
               ограниченной линией, заданной данным алгоритмом. Точки на линии учитывать не следует.
             </p>
-            <input type="text" id="t-v4t6">
+            <input type="text" id="v4t6">
           </div>
         </li>
-        <li class="variant-task" id="v4t7">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">7.</div>
             <p>
@@ -154,10 +154,10 @@
               Сколько Мбайт будет составлять средний размер документа, отсканированного с изменёнными
               параметрами?
             </p>
-            <input type="text" id="t-v4t7">
+            <input type="text" id="v4t7">
           </div>
         </li>
-        <li class="variant-task" id="v4t8">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">8.</div>
             <p>Все 4-буквенные слова, составленные из букв В, Л, Т, У, записаныв алфавитном порядке и
@@ -170,10 +170,10 @@
               …… <br>
               Запишите слово, которое стоит под номером 98.
             </p>
-            <input type="text" id="t-v4t8">
+            <input type="text" id="v4t8">
           </div>
         </li>
-        <li class="variant-task" id="v4t9">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">9.</div>
             <p>В каждой строке электронной таблицы записаны четыре натуральных числа. Определите, сколько
@@ -182,10 +182,10 @@
               сумма длин двух сторон равна длине третьей стороны).
             </p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=113564">Задание 9</a>
-            <input type="text" id="t-v4t9">
+            <input type="text" id="v4t9">
           </div>
         </li>
-        <li class="variant-task" id="v4t10">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">10.</div>
             <p>Текст произведения Льва Николаевича Толстого «Севастопольские рассказы» представлен в
@@ -194,10 +194,10 @@
               В ответе запишите только число.
             </p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=115865">Задание 10</a>
-            <input type="text" id="t-v4t10">
+            <input type="text" id="v4t10">
           </div>
         </li>
-        <li class="variant-task" id="v4t11">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">11.</div>
             <p> При регистрации в компьютерной системе каждому пользователю выдаётся пароль, состоящий
@@ -209,10 +209,10 @@
               Определите объём памяти (в байтах), необходимый для хранения сведений о 100 пользователях. В
               ответе запишите только целое число — количество байт.
             </p>
-            <input type="text" id="t-v4t11">
+            <input type="text" id="v4t11">
           </div>
         </li>
-        <li class="variant-task" id="v4t12">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">12.</div>
             <p>Исполнитель Редактор получает на вход строку цифр и преобразует её. Редактор может
@@ -251,10 +251,10 @@
               КОНЕЦ ПОКА <br>
               КОНЕЦ
             </p>
-            <input type="text" id="t-v4t12">
+            <input type="text" id="v4t12">
           </div>
         </li>
-        <li class="variant-task" id="v4t13">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">13.</div>
             <p>На рисунке — схема дорог, связывающих города А, Б, В, Г, Д, Е, Ж, И, К, Л.По каждой дороге
@@ -262,29 +262,29 @@
               путей из города А в город Л?
             </p>
             <img src="img/variant_4/task13.png" alt="Изображение к заданию 13">
-            <input type="text" id="t-v4t13">
+            <input type="text" id="v4t13">
           </div>
         </li>
-        <li class="variant-task" id="v4t14">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">14.</div>
             <p>Значение выражения 2 · 216⁸ + 4 · 36¹² + 6¹⁵ − 1296 записали в системе счисления с основанием
               6. Сколько значащих нулей содержится в этой записи?
             </p>
-            <input type="text" id="t-v4t14">
+            <input type="text" id="v4t14">
           </div>
         </li>
-        <li class="variant-task" id="v4t15">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">15.</div>
             <p>Для какого наименьшего целого неотрицательного числа A выражение
               <span class="expression">(x * y < A) ∨ (x < y) ∨ (x ≥ 12)</span>
               тождественно истинно, то есть принимает значение 1 при любых целых неотрицательных x и y?
             </p>
-            <input type="text" id="t-v4t15">
+            <input type="text" id="v4t15">
           </div>
         </li>
-        <li class="variant-task" id="v4t16">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">16.</div>
             <p>
@@ -293,10 +293,10 @@
               F(n) = F(n–1) * (n + 2), при n > 1<br>
               Чему равно значение функции F(5)? В ответе запишите только натуральное число.
             </p>
-            <input type="text" id="t-v4t16">
+            <input type="text" id="v4t16">
           </div>
         </li>
-        <li class="variant-task" id="v4t17">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">17.</div>
             <p>В файле содержится последовательность из 10 000 целых положительных чисел. Каждое число
@@ -306,10 +306,10 @@
               различных элемента последовательности. Порядок элементов в паре не важен.
             </p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=91277">Задание 17</a>
-            <input type="text" id="t-v4t17">
+            <input type="text" id="v4t17">
           </div>
         </li>
-        <li class="variant-task" id="v4t18">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">18.</div>
             <p>Квадрат разлинован на N × N клеток (1 < N < 26). Исполнитель Робот может перемещаться по
@@ -330,10 +330,10 @@
             </p>
             <img src="img/variant_4/task18.png" alt="Изображение к заданию 18">
             <p>Для указанных входных данных ответом должна быть пара чисел: 22 и 41.</p>
-            <input type="text" id="t-v4t18">
+            <input type="text" id="v4t18">
           </div>
         </li>
-        <li class="variant-task" id="v4t19">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">19.</div>
             <p>Два игрока, Петя и Ваня, играют в следующую игру. Перед игроками лежат две кучи камней.
@@ -354,10 +354,10 @@
               Известно, что Ваня выиграл своим первым ходом после неудачного первого хода Пети. Укажите
               минимальное значение S, когда такая ситуация возможна.
             </p>
-            <input type="text" id="t-v4t19">
+            <input type="text" id="v4t19">
           </div>
         </li>
-        <li class="variant-task" id="v4t20">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">20.</div>
             <p>
@@ -382,10 +382,10 @@
               — Петя может выиграть своим вторым ходом независимо от того, как будет ходить Ваня. <br>
               Найденные значения запишите в ответе в порядке возрастания без разделительных знаков.
             </p>
-            <input type="text" id="t-v4t20">
+            <input type="text" id="v4t20">
           </div>
         </li>
-        <li class="variant-task" id="v4t21">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">21.</div>
             <p>
@@ -407,10 +407,10 @@
               Найдите максимальное значение S, при котором у Вани есть выигрышная стратегия, позволяющая
               ему выиграть при любой игре Пети.
             </p>
-            <input type="text" id="t-v4t21">
+            <input type="text" id="v4t21">
           </div>
         </li>
-        <li class="variant-task" id="v4t22">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">22.</div>
             <p>В файле содержится информация о совокупности N вычислительных процессов,
@@ -435,10 +435,10 @@
               процесса 3, то есть, через 5 мс. Он длится 7 мс, так что минимальное время завершения всех процессов
               равно 5 + 7 = 12 мс
             </p>
-            <input type="text" id="t-v4t22">
+            <input type="text" id="v4t22">
           </div>
         </li>
-        <li class="variant-task" id="v4t23">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">23.</div>
             <p>Исполнитель РазДваТри преобразует число на экране. <br>
@@ -454,10 +454,10 @@
               программы. Например, для программы 312 при исходном числе 3 траектория будет состоять из чисел 9,
               10, 20.
             </p>
-            <input type="text" id="t-v4t23">
+            <input type="text" id="v4t23">
           </div>
         </li>
-        <li class="variant-task" id="v4t24">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">24.</div>
             <p>Текстовый файл содержит только заглавные буквы латинского алфавита (ABC…Z). Определите
@@ -467,10 +467,10 @@
               Для выполнения этого задания следует написать программу. Ниже приведён файл, который
               необходимо обработать с помощью данного алгоритма.</p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=89876">Задание 24</a>
-            <input type="text" id="t-v4t24">
+            <input type="text" id="v4t24">
           </div>
         </li>
-        <li class="variant-task" id="v4t25">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">25.</div>
             <p>
@@ -478,10 +478,10 @@
               которые можно представить в виде N = 2<sup>m</sup> · 3<sup>n</sup>, где m — чётное число, n —
               нечётное число. В ответе запишите все найденные числа в порядке возрастания.
             </p>
-              <input type="text" id="t-v4t25">
+              <input type="text" id="v4t25">
           </div>
         </li>
-        <li class="variant-task" id="v4t26">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">26.</div>
             <p>Системный администратор раз в неделю создаёт архив пользовательских файлов. Однако объём
@@ -514,10 +514,10 @@
               пар — 50, поэтому ответ для приведённого примера:<br>
               2 50
             </p>
-            <input type="text" id="t-v4t26">
+            <input type="text" id="v4t26">
           </div>
         </li>
-        <li class="variant-task" id="v4t27">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">27.</div>
             <p>В текстовом файле записан набор пар натуральных чисел, не превышающих 10 000. Необходимо
@@ -564,7 +564,7 @@
               поскольку написанная по такому алгоритму программа будет выполняться
               слишком долго.
             </p>
-            <input type="text" id="t-v4t27">
+            <input type="text" id="v4t27">
           </div>
         </li>
       </ul>
