--- a/variant_5.html
+++ b/variant_5.html
@@ -26,16 +26,16 @@
 <main>
   <section class="variants_types">
     <ul class="variants_types_list">
-      <li class="variants_types_list-item active numbers">Задания по вариантам</li>
+      <li class="variants_types_list-item numbers">Задания по номерам</li>
       <li class="variants_types_list-item themes">Задания по темам</li>
-      <li class="variants_types_list-item prepared">Варианты</li>
+      <li class="variants_types_list-item active prepared">Варианты</li>
     </ul>
   </section>
   <article class="variant">
     <h1>Вариант 5</h1>
     <form action="#" method="get" name="v5" id="v5">
       <ul class="variant-tasks">
-        <li class="variant-task" id="v5t1">
+        <li class="variant-task">
           <div class="task-wrapper">
             <div class="number">1.</div>
             <p>На рисунке схема дорог Н-ского района изображена в виде графа, в таблице содержатся сведения
@@ -47,10 +47,10 @@
               таблице никак не связана с буквенными обозначениями на графе. Определите длину дороги из пункта Г
               в пункт К. В ответе запишите целое число.
             </p>
-            <input type="text" id="t-v5t1">
+            <input type="text"  id="v5t1">
           </div>
         </li>
-        <li class="variant-task" id="v5t2">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">2.</div>
             <p>Логическая функция F задаётся выражением ((x ∧ ¬y) ≡ (z ∨ ¬w)) → (x ∧ z). На рисунке
@@ -70,10 +70,10 @@
             <p>Тогда первому столбцу соответствует переменная y, а второму столбцу соответствует переменная x.
               В ответе нужно написать: yx.
             </p>
-            <input type="text" id="t-v5t2">
+            <input type="text" id="v5t2">
           </div>
         </li>
-        <li class="variant-task" id="v5t3">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">3.</div>
             <p>В файле приведён фрагмент базы данных «Продукты» о поставках товаров в магазины районов
@@ -102,10 +102,10 @@
               количество упаковок кофе растворимого, имеющихся в наличии в магазинах Первомайского района, за
               период с 1 по 10 июня включительно. <br>
               В ответе запишите только число.</p>
-            <input type="text" id="t-v5t3">
+            <input type="text" id="v5t3">
           </div>
         </li>
-        <li class="variant-task" id="v5t4">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">4.</div>
             <p>Для кодирования растрового рисунка, напечатанного с использованием шести красок, применили
@@ -117,10 +117,10 @@
             <p>Примечание. Условие Фано означает, что ни одно кодовое слово не является началом другого
               кодового слова.
             </p>
-            <input type="text" id="t-v5t4">
+            <input type="text" id="v5t4">
           </div>
         </li>
-        <li class="variant-task" id="v5t5">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">5.</div>
             <p>На вход алгоритма подаётся натуральное число N. Алгоритм строит по нему новое число R
@@ -139,10 +139,10 @@
               Укажите минимальное число R, которое превышает число 55 и может являться результатом работы
               данного алгоритма. В ответе это число запишите в десятичной системе счисления.
             </p>
-            <input type="text" id="t-v5t5">
+            <input type="text" id="v5t5">
           </div>
         </li>
-        <li class="variant-task" id="v5t6">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">6.</div>
             <p>. Исполнитель Черепаха действует на плоскости с декартовой системой координат. В начальный
@@ -160,10 +160,10 @@
               Определите количество точек с целочисленными координатами, лежащих внутри или на границе
               области, которую ограничивает заданная алгоритмом линия.
             </p>
-            <input type="text" id="t-v5t6">
+            <input type="text" id="v5t6">
           </div>
         </li>
-        <li class="variant-task" id="v5t7">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">7.</div>
             <p>
@@ -172,10 +172,10 @@
               одинаковое количество битов, коды пикселей записываются в файл один за другим, без промежутков.
               Какое максимальное количество цветов можно использовать в изображении?
             </p>
-            <input type="text" id="t-v5t7">
+            <input type="text" id="v5t7">
           </div>
         </li>
-        <li class="variant-task" id="v5t8">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">8.</div>
             <p>Все 4-буквенные слова, составленные из букв Д, Е, К, О, Р, записаны в алфавитном порядке и
@@ -189,10 +189,10 @@
               … <br>
               Под каким номером в списке идёт первое слово, которое начинается с буквы K?
             </p>
-            <input type="text" id="t-v5t8">
+            <input type="text" id="v5t8">
           </div>
         </li>
-        <li class="variant-task" id="v5t9">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">9.</div>
             <p>. Электронная таблица содержит результаты ежечасного измерения температуры воздуха на
@@ -200,10 +200,10 @@
               температура оказывалась выше среднесуточной на 7 и более градусов.
             </p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=84484">Задание 9</a>
-            <input type="text" id="t-v5t9">
+            <input type="text" id="v5t9">
           </div>
         </li>
-        <li class="variant-task" id="v5t10">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">10.</div>
             <p>С помощью текстового редактора определите, сколько раз, не считая сносок, встречается слово
@@ -211,10 +211,10 @@
               такие как «Онегина», «Онегиным» и т. д., учитывать не следует. В ответе укажите только число.
             </p>
             <a href="https://inf-ege.sdamgia.ru/doc/inf/zadanie10/10_demo.docx">Задание 10</a>
-            <input type="text" id="t-v5t10">
+            <input type="text" id="v5t10">
           </div>
         </li>
-        <li class="variant-task" id="v5t11">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">11.</div>
             <p> При регистрации в компьютерной системе каждому пользователю выдаётся пароль, состоящий
@@ -225,10 +225,10 @@
               кодирование, все символы кодируются одинаковым и минимально возможным количеством бит. <br>
               Сколько бит отведено для хранения дополнительных сведений о каждом пользователе?
             </p>
-            <input type="text" id="t-v5t11">
+            <input type="text" id="v5t11">
           </div>
         </li>
-        <li class="variant-task" id="v5t12">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">12.</div>
             <p>Исполнитель Редактор получает на вход строку цифр и преобразовывает её. Редактор может
@@ -278,10 +278,10 @@
               приведённую выше программу. В результате получилась строка 2211. Какое наименьшее количество
               единиц могло быть в исходной строке?
             </p>
-            <input type="text" id="t-v5t12">
+            <input type="text" id="v5t12">
           </div>
         </li>
-        <li class="variant-task" id="v5t13">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">13.</div>
             <p>На рисунке – схема дорог, связывающих города А, Б, В, Г, Д, Е, Ж, И, К, Л, М. По каждой дороге
@@ -291,10 +291,10 @@
             <p>
               Сколько существует различных путей из города А в город М?
             </p>
-            <input type="text" id="t-v5t13">
+            <input type="text" id="v5t13">
           </div>
         </li>
-        <li class="variant-task" id="v5t14">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">14.</div>
             <p>Операнды арифметического выражения записаны в системе счисления с основаниями 18 и 12:
@@ -305,20 +305,20 @@
               арифметического выражения на 133 и укажите его в ответе в десятичной системе счисления.
               Основание системы счисления в ответе указывать не нужно.
             </p>
-            <input type="text" id="t-v5t14">
+            <input type="text" id="v5t14">
           </div>
         </li>
-        <li class="variant-task" id="v5t15">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">15.</div>
             <p>Для какого наибольшего целого неотрицательного числа А выражение
               <span class="expression">(x · y < 140) ∨ (y > A) ∨ (x > A)</span>
               тождественно истинно, т. е. принимает значение 1 при любых целых неотрицательных x и y?
             </p>
-            <input type="text" id="t-v5t15">
+            <input type="text" id="v5t15">
           </div>
         </li>
-        <li class="variant-task" id="v5t16">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">16.</div>
             <p>
@@ -332,10 +332,10 @@
             <p>
               В ответе запишите только натуральное число.
             </p>
-            <input type="text" id="t-v5t16">
+            <input type="text" id="v5t16">
           </div>
         </li>
-        <li class="variant-task" id="v5t17">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">17.</div>
             <p>В файле содержится последовательность из 10 000 целых положительных чисел. Каждое число
@@ -345,10 +345,10 @@
               различных элемента последовательности. Порядок элементов в паре не важен.
             </p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=91277">Задание 17</a>
-            <input type="text" id="t-v5t17">
+            <input type="text" id="v5t17">
           </div>
         </li>
-        <li class="variant-task" id="v5t18">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">18.</div>
             <p>Квадрат разлинован на N×N клеток (1 < N < 17). Исполнитель Робот может перемещаться по
@@ -369,10 +369,10 @@
             </p>
             <img src="img/variant_5/task18.png" alt="Изображение к заданию 18">
             <p>Для указанных входных данных ответом должна быть пара чисел 41 и 22.</p>
-            <input type="text" id="t-v5t18">
+            <input type="text" id="v5t18">
           </div>
         </li>
-        <li class="variant-task" id="v5t19">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">19.</div>
             <p>Два игрока, Петя и Ваня, играют в следующую игру. Перед игроками лежит куча камней. Игроки
@@ -390,10 +390,10 @@
               Известно, что Ваня выиграл своим первым ходом после неудачного первого хода Пети. Укажите
               минимальное значение S, когда такая ситуация возможна.
             </p>
-            <input type="text" id="t-v5t19">
+            <input type="text" id="v5t19">
           </div>
         </li>
-        <li class="variant-task" id="v5t20">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">20.</div>
             <p>
@@ -415,10 +415,10 @@
               — Петя может выиграть своим вторым ходом независимо от того, как будет ходить Ваня. <br>
               Найденные значения запишите в ответе в порядке возрастания без разделительных знаков.
             </p>
-            <input type="text" id="t-v5t20">
+            <input type="text" id="v5t20">
           </div>
         </li>
-        <li class="variant-task" id="v5t21">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">21.</div>
             <p>
@@ -439,10 +439,10 @@
               любой игре Пети; <br>
               — у Вани нет стратегии, которая позволит ему гарантированно выиграть первым ходом
             </p>
-            <input type="text" id="t-v5t21">
+            <input type="text" id="v5t21">
           </div>
         </li>
-        <li class="variant-task" id="v5t22">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">22.</div>
             <p>В файле содержится информация о совокупности N вычислительных процессов,
@@ -466,10 +466,10 @@
               процесса 3, то есть, через 5 мс. Он длится 7 мс, так что минимальное время завершения всех процессов
               равно 5 + 7 = 12 мс.
             </p>
-            <input type="text" id="t-v5t22">
+            <input type="text" id="v5t22">
           </div>
         </li>
-        <li class="variant-task" id="v5t23">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">23.</div>
             <p>Исполнитель РазДва преобразует число на экране. У исполнителя есть две команды, которым
@@ -484,10 +484,10 @@
               программы. Например, для программы 212 при исходном числе 4 траектория будет состоять из чисел 8,
               9, 18.
             </p>
-            <input type="text" id="t-v5t23">
+            <input type="text" id="v5t23">
           </div>
         </li>
-        <li class="variant-task" id="v5t24">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">24.</div>
             <p>Текстовый файл содержит только заглавные буквы латинского алфавита (ABC…Z). Определите
@@ -495,10 +495,10 @@
               Для выполнения этого задания следует написать программу. Ниже приведён файл, который
               необходимо обработать с помощью данного алгоритма.</p>
             <a href="https://inf-ege.sdamgia.ru/get_file?id=95112">Задание 24</a>
-            <input type="text" id="t-v5t24">
+            <input type="text" id="v5t24">
           </div>
         </li>
-        <li class="variant-task" id="v5t25">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">25.</div>
             <p>
@@ -514,10 +514,10 @@
               содержать следующие значения: <br>
               16 8
             </p>
-            <input type="text" id="t-v5t25">
+            <input type="text" id="v5t25">
           </div>
         </li>
-        <li class="variant-task" id="v5t26">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">26.</div>
             <p>Во многих компьютерных системах текущее время хранится в формате «UNIX-время» —
@@ -548,10 +548,10 @@
               количество секунд, в течение которых на этой неделе выполнялось такое максимальное количество
               процессов.
             </p>
-            <input type="text" id="t-v5t26">
+            <input type="text" id="v5t26">
           </div>
         </li>
-        <li class="variant-task" id="v5t27">
+        <li class="variant-task" >
           <div class="task-wrapper">
             <div class="number">27.</div>
             <p>Дана последовательность натуральных чисел. Необходимо найти максимально возможную
@@ -566,7 +566,7 @@
               Вам даны два входных файла (A и B), каждый из которых имеет описанную выше структуру. В
               ответе укажите два числа: сначала значение искомой суммы для файла A, затем для файла B.
             </p>
-            <input type="text" id="t-v5t27">
+            <input type="text" id="v5t27">
           </div>
         </li>
       </ul>
